# bot

./: .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.pypy  LICENSE  Makefile  Procfile  README.md  api_dolar.py  api_expenses.py  commands.py  db.py  docker-compose.prod.yml  docker-compose.yml  docs.json  heroku.yml  justfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  telegram_bot.py  versioneer.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-publish.yml  lint.yaml  pre-commit.yaml  python-app.yml  test.yml
eduzen_bot/: __init__.py  __main__.py  callbacks_handler.py  config.py  database.py  db.py  decorators.py  logging.yml  models.py  prueba.py  telegram_bot.py
eduzen_bot/api/: btc.py  expenses.py  twitter.py  weather.py
eduzen_bot/auth/: restricted.py
eduzen_bot/commands/btc/: api.py
eduzen_bot/commands/dolar/: api.py  dolar.py
eduzen_bot/commands/questions/: questions.py
eduzen_bot/commands/subte/: crawlers.py
eduzen_bot/commands/transito/: api.py  transito.py
eduzen_bot/commands/trenes/: api.py  trenes.py
eduzen_bot/crawlers/: subte.py
eduzen_bot/handlers/commands/: __init__.py  commands.py  questions.py
eduzen_bot/handlers/messages/: message.py  vocabulary.py
eduzen_bot/plugins/commands/alarms/: __init__.py
eduzen_bot/plugins/commands/basic/: __init__.py  command.py
eduzen_bot/plugins/commands/btc/: __init__.py  api.py  command.py
eduzen_bot/plugins/commands/code/: __init__.py  command.py
eduzen_bot/plugins/commands/dolar/: __init__.py  api.py  command.py
eduzen_bot/plugins/commands/events/: command.py
eduzen_bot/plugins/commands/expenses/: __init__.py  api.py  command.py
eduzen_bot/plugins/commands/feriados/: aconstants.py  api.py  command.py
eduzen_bot/plugins/commands/git/: command.py
eduzen_bot/plugins/commands/hackernews/: command.py
eduzen_bot/plugins/commands/hora/: command.py
eduzen_bot/plugins/commands/movies/: api.py  callbacks.py  command.py  constants.py  keyboards.py
eduzen_bot/plugins/commands/questions/: __init__.py  command.py  menu.py
eduzen_bot/plugins/commands/series/: api.py  callbacks.py  command.py  constants.py  keyboards.py
eduzen_bot/plugins/commands/stocks/: command.py
eduzen_bot/plugins/commands/subte/: __init__.py  api.py  command.py  crawlers.py
eduzen_bot/plugins/commands/teatro/: api.py  command.py
eduzen_bot/plugins/commands/transito/: api.py  command.py
eduzen_bot/plugins/commands/trenes/: __init__.py  api.py  command.py
eduzen_bot/plugins/commands/weather/: __init__.py  api.py  command.py
eduzen_bot/plugins/job_queue/alarms/: command.py
eduzen_bot/plugins/messages/: chatter.py  inline.py  message.py  unknown.py  vocabulary.py
eduzen_bot/scripts/: healthcheck.sh  hit_bot.py  initialize_db.py  runserver.sh  wait_for_db.py
eduzenbot/: __main__.py  callbacks_handler.py  decorators.py  models.py  telegram_bot.py
eduzenbot/adapters/: plugin_loader.py  telegram_error_handler.py
eduzenbot/auth/: restricted.py
eduzenbot/domain/: report_scheduler.py
eduzenbot/menus/: builder.py
eduzenbot/plugins/commands/alarms/: command.py
eduzenbot/plugins/commands/basic/: command.py
eduzenbot/plugins/commands/btc/: api.py  command.py
eduzenbot/plugins/commands/code/: command.py
eduzenbot/plugins/commands/dolar/: api.py  command.py
eduzenbot/plugins/commands/events/: command.py
eduzenbot/plugins/commands/expenses/: api.py  command.py
eduzenbot/plugins/messages/: chatter.py  inline.py  message.py  unknown.py  vocabulary.py
eduzenbot/scripts/: initialize_db.py  load_event_data.py  load_report_data.py  load_user_data.py  runserver.sh
eduzenbot/services/: services.py
src/: __init__.py  __main__.py  commands.py  config.py  database.py  db.py  main.py  message.py  telegram_bot.py
src/api/: btc.py  dolar.py  expenses.py  twitter.py  weather.py
src/auth/: restricted.py
src/handlers/commands/: __init__.py  alarm.py  commands.py  questions.py
src/handlers/messages/: chatter.py  config.py  inline.py  message.py  responses.py  unknown.py  vocabulary.py
src/menus/: builder.py
src/scripts/: initialize_db.py
tests/: conftest.py  factories.py  test_decorators.py  test_eventlog.py  test_main.py  test_models.py  test_restricted.py  test_restricted_with_create_user.py  test_telegram_bot.py  test_users.py
tests/commands/btc/: test_btc.py  test_btc_api.py
tests/commands/dolar/: test_dolar_api.py
tests/commands/hn/: test_hackernews.py
tests/commands/news/: test_news.py
tests/commands/weather/: test_weather_api.py
tests/handlers/message/: test_greetings.py
tests/test_dollar/: test_integration.py
(+54 files in other folders)
