[build-system]
requires = ["hatchling", "pip-tools", "wheel"]
build-backend = "hatchling.build"

[project]
name = "eduzenbot"
description = "A bot for telegram"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Eduardo Enriquez (eduzen)", email = "eduardo.a.enriquez@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "attrs",
  "beautifulsoup4",
  "cachetools",
  "emoji",
  "peewee",
  "pendulum",
  "psycopg2-binary",
  "python-telegram-bot",
  "requests",
  "rich",
  "sentry-sdk",
  "tmdbsimple",
  "tweepy",
  "yfinance",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "ipython",
  "ipdb",
  "factory-boy",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-xdist",
  "pytest-recording",
  "pytest-randomly",
  "mypy",
  "types-beautifulsoup4",
  "types-cachetools",
  "types-colorama",
  "types-docutils",
  "types-Pygments",
  "types-psycopg2",
  "types-pytz",
  "types-requests",
  "types-setuptools"
]


[project.urls]
Documentation = "https://github.com/eduzen/bot#readme"
Issues = "https://github.com/eduzen/bot/issues"
Source = "https://github.com/eduzen/bot"

[tool.hatch.version]
path = "eduzenbot/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=eduzenbot --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "eduzenbot/__about__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"

[tool.coverage.json]
pretty_print=true
